testing/errors/toolateforpostfix4.a
;ACME 0.96.5
	a = 3
	b = a	; read a
	!for a+2, 3, 4 {	; -> "too late for postfix"
		;
	}
